// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Logo adds logoMini class without sideBarOpen 1`] = `
<a
  href="/"
  onClick={[Function]}
>
  <div
    className="Logo-logo-1 Logo-logoMini-2"
  />
</a>
`;

exports[`components/layout/Logo renders correctly with sideBarOpen 1`] = `
<a
  href="/"
  onClick={[Function]}
>
  <div
    className="Logo-logo-1"
  />
</a>
`;
